fixing height and overflowing body content

--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,28 @@
 .App {
   font-family: "Montserrat", sans-serif;
   position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  left: 33%;
+  top: 10%;
   border: none;
-  box-shadow: 10px 15px 5px #7FC8A9;
+  box-shadow: 10px 15px 5px #7fc8a9;
   border-radius: 10px;
   padding: 10px;
   background-color: #444941;
   color: #d5eebb;
   width: 300px;
-  height: 300px;
+  height: 70%;
+  overflow: auto;
 }
 
-.select-status__styling{
+.select-status__styling {
   display: flex;
   justify-content: space-around;
   padding-top: 10px;
   font-size: 15px;
 }
 
-#select__styling{
+#select__styling {
   border-radius: 5px;
   font-family: "Montserrat", sans-serif;
   font-size: 10px;
-
-
 }
